[package]
authors = ["ruin"]
name = "sabi"
version = "0.1.0"

[features]
with-opengl = ["glium"]
# with-rustbox = ["rustbox"]
with-tcod = []

[dependencies]
tcod = "0.11.0"
rand = "0.3.15"
ears = "0.4.0"
bitflags = "0.8.0"
textwrap = "0.4.0"
uuid = { version = "0.4.0", features = ["serde", "v4"]}
lazy_static = "0.2.5"

# Logging
backtrace = "0.3.0"
slog = "1.2"
slog-stream = "1.2"
env_logger = "0.3"
chrono = "0.3.0"

# Game data serialization
toml = "0.3.2"
serde = "0.9.11"
serde_derive = "0.9.11"
enum_derive = "0.1.7"
macro-attr = "0.2.0"

goap = { path = "/home/nuko/build/goap-rs" }

glium = { version = "0.16.0", optional = true }
# rustbox = { version = "0.9.0", optional = true }
rustbox = { version = "0.9.0" }
