[package]
authors = ["ruin"]
name = "sabi"
version = "0.1.0"

[features]
with-opengl = ["glium"]
# with-rustbox = ["rustbox"]
with-tcod = []

[dependencies]
tcod = "0.11.0"
rand = "0.3.15"
bitflags = "0.8.0"
lazy_static = "0.2.5"
noise = "0.4.0"

# Logging
backtrace = "0.3.0" # REMOVE?
slog = "1.2"
slog-stream = "1.2"
env_logger = "0.3"
chrono = "0.3.0" # REMOVE?

# Game data serialization
bincode = "0.7.0"
toml = "0.3.2"
serde = "0.9.11"
serde_derive = "0.9.11"
enum_derive = "0.1.7"
macro-attr = "0.2.0"

calx-ecs = "0.5.0"
calx-alg = { git = "https://github.com/Ruin0x11/calx" }

goap = { git = "https://github.com/Ruin0x11/goap-rs" }
infinigen = { git = "https://github.com/Ruin0x11/infinigen-rs" }

glium = { version = "0.16.0", optional = true }
# rustbox = { version = "0.9.0", optional = true }
rustbox = { version = "0.9.0" }

[profile.dev]
codegen-units = 4