[package]
authors = ["ruin"]
name = "sabi"
version = "0.1.0"

[dependencies]
rand = "0.3.15"
bitflags = "0.8.0"
lazy_static = "0.2.5"
noise = "0.4.0"
hlua = "0.3.1"
rust-crypto = "^0.2"
glob = "0.2"
regex = "0.2"

# Drawing
glium = "0.16.0"
image = "0.13.0"
cgmath = "0.14.1"
texture_packer = {version = "0.9.0", git = "https://github.com/Ruin0x11/texture_packer" }
rusttype = "0.2"

# Logging
backtrace = "0.3.0" # REMOVE?
slog = "1.2"
slog-stream = "1.2"
env_logger = "0.3"
chrono = "0.3.0" # REMOVE?

# Game data serialization
bincode = "0.8.0"
toml = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
enum_derive = "0.1.7"
macro-attr = "0.2.0"

calx-ecs = "0.6.0"
calx-alg = { git = "https://github.com/rsaarelm/calx" }

goap = { git = "https://github.com/Ruin0x11/goap-rs" }
infinigen = { git = "https://github.com/Ruin0x11/infinigen-rs" }

[profile.dev]
codegen-units = 4